[package]
name = "rustdfs-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.44", features = ["derive", "rc"]}
serde_json = "1.0.44"
x11-dl = "2.18.4"
log = "0.4.8"
thiserror = "1.0.30"
